@startuml

title __FRAGMENTS's Class Diagram__\n

  namespace be.kuleuven.travelrecipe {
    namespace views.fragments {
      class be.kuleuven.travelrecipe.views.fragments.HomeFragment {
          - imageView1 : ImageView
          - imageView2 : ImageView
          - imageView3 : ImageView
          - imageView4 : ImageView
          - levelText : TextView
          - levelTextview : TextView
          - profileImage : ImageView
          - progressBar1 : ProgressBar
          - progressBar2 : ProgressBar
          - progressBar3 : ProgressBar
          - progressBar4 : ProgressBar
          - recipeAmountText : TextView
          - recipeAmountTextview : TextView
          - usernameTextview : TextView
          + HomeFragment()
          + initView()
          + notifyAfricaChanged()
          + notifyAmericaChanged()
          + notifyAsiaChanged()
          + notifyEuropeChanged()
          + notifyImageChanged()
          + notifyLevelChanged()
          + notifyNameChanged()
          + notifyRecipeNumberChanged()
          + onCreate()
          + onCreateView()
          - initModel()
      }
    }
  }
  

  namespace be.kuleuven.travelrecipe {
    namespace views.fragments {
      class be.kuleuven.travelrecipe.views.fragments.MeFragment {
          - imgSetting : ImageView
          - listRecyclerView : RecyclerView
          + MeFragment()
          + notifyRecipesListChanged()
          + onCreate()
          + onCreateView()
          - bindAdapter()
          - initModel()
          - initView()
      }
    }
  }
  

  namespace be.kuleuven.travelrecipe {
    namespace views.fragments {
      class be.kuleuven.travelrecipe.views.fragments.SearchFragment {
          - dashboardRecyclerView : RecyclerView
          - dashboardSpinner : Spinner
          - searchView : SearchView
          + SearchFragment()
          + notifyRecipesListChanged()
          + onCreate()
          + onCreateView()
          - bindAdapter()
          - initModel()
          - initView()
      }
    }
  }
  

  be.kuleuven.travelrecipe.views.fragments.HomeFragment .up.|> be.kuleuven.travelrecipe.notifier.HomepageFragmentNotifier
  be.kuleuven.travelrecipe.views.fragments.HomeFragment -up-|> androidx.fragment.app.Fragment
  be.kuleuven.travelrecipe.views.fragments.HomeFragment o-- be.kuleuven.travelrecipe.models.user.User : user
  be.kuleuven.travelrecipe.views.fragments.MeFragment .up.|> be.kuleuven.travelrecipe.notifier.RecipeNotifier
  be.kuleuven.travelrecipe.views.fragments.MeFragment -up-|> androidx.fragment.app.Fragment
  be.kuleuven.travelrecipe.views.fragments.MeFragment o-- be.kuleuven.travelrecipe.models.dashboard.Dashboard : dashboard
  be.kuleuven.travelrecipe.views.fragments.MeFragment o-- be.kuleuven.travelrecipe.adapters.DashboardAdapter : listDashboardAdapter
  be.kuleuven.travelrecipe.views.fragments.SearchFragment .up.|> be.kuleuven.travelrecipe.notifier.RecipeNotifier
  be.kuleuven.travelrecipe.views.fragments.SearchFragment -up-|> androidx.fragment.app.Fragment
  be.kuleuven.travelrecipe.views.fragments.SearchFragment o-- be.kuleuven.travelrecipe.models.dashboard.Dashboard : dashboard
  be.kuleuven.travelrecipe.views.fragments.SearchFragment o-- be.kuleuven.travelrecipe.adapters.DashboardAdapter : dashboardAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
